--- a/Assignment5/Assignment5/Assignment5.csproj
+++ b/Assignment5/Assignment5/Assignment5.csproj
@@ -103,6 +103,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -128,6 +129,27 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\im.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\im2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\im3.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sound_ex_machina_Light+Applause,+Cheer.mp3" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\bball+crowd.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Swish.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Back+Board.wav" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
